# struct-lmm

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.md  MANIFEST.in  README.md  install  readthedocs.yml  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: python-package.yml
doc/: Makefile  commandline.rst  conf.py  environment.yml  example.py  index.rst  install.rst  interpretation.rst  lmm.rst  make.bat  public.rst  python.rst  runner.rst  scripts.rst  struct_lmm.rst  tutorial.rst  utils.rst
struct_lmm/: __init__.py  _lmm.py  _testit.py  hierGWAS.py  pvmixchi2.py  structlmm.py  utils.py
struct_lmm/R/: davies_final_integration.R  davies_skat.R  liu_mod.R
struct_lmm/interpretation/: __init__.py  bf.py  optimal_rho.py  predict_genetic_effect.py
struct_lmm/lmm/: __init__.py  lmm.py  lmm_core.py  lmm_inter.py  run_structlmm.py  structlmm.py
struct_lmm/runner/: __init__.py  run_lmm.py  run_lmm_int.py  run_struct_lmm.py
struct_lmm/scripts/: __init__.py  lmm_analyze.py  lmm_int_analyze.py  lmm_lr.py  norm_env.py  struct_lmm_analyze.py
struct_lmm/test/: test_fdr.py  test_mocktest.py  test_structlmm.py
struct_lmm/utils/: __init__.py  compute_bf.py  compute_effects.py  compute_rho.py  fdr.py  pvmixchi2.py  sugar_utils.py
