[metadata]
author = D. Horta, F. P. Casale, R. Moore and O. Stegle
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Library for multi-environment interaction test
download_url = https://github.com/limix/struct-lmm
keywords = gxe, interaction, lmm, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = struct-lmm
url = https://github.com/limix/struct-lmm
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.4
install_requires =
    appdirs>=1.4.3
    asciitree>=0.3.3
    bgen-reader>=3.0.5
    blessings>=1.7
    brent-search>=2.0.0
    click>=7.0
    colorama>=0.4.1
    dask[array,dataframe]>=1.2.0
    glimix-core>=3.1.7
    h5py>=2.9.0
    humanfriendly>=4.18
    joblib>=0.13.2
    limix-plot>=0.1.0
    matplotlib>=3.0.3
    monotonic>=1.5
    ndarray-listener>=2.0.0
    netcdf4>=1.5.0.1
    numba>=0.43.1
    numpy-sugar>=1.4.1
    numpy>=1.16.2
    optimix>=3.0.3
    pandas-plink>=1.2.30
    pandas>=0.24.2
    pytest-doctestplus>=0.3.0
    pytest>=4.4.1
    scikit-learn>=0.20.3
    scipy>=1.2.1
    seaborn>=0.9.0
    setuptools>=41.0.0
    statsmodels>=0.9.0
    sphinxcontrib-programoutput>=0.11
    tqdm>=4.31.1
    xarray>=0.12.1
tests_requires =
    pytest>=4.4.1
    pytest-doctestplus>=0.3.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    -s
    --doctest-plus
    --doctest-rst
    --doctest-modules
    --doctest-glob="*.rst"
    --text-file-format="rst"
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build .undodir doc/_generated limix/model/struct_lmm
doctest_plus = enabled
doctest_plus_atol = 1e-03
doctest_plus_rtol = 1e-03
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE FLOAT_CMP
pep8ignore = R0915

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501 E741 E203 W503
exclude = doc/_build

[pylint]
disable = R0915

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_roles = class, mod
ignore_messages = Error in "math" directive
