[metadata]
author = D. Horta, P. Casale, R. Moore
author_email = rm18@sanger.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Linear mixed model to study multivariate genotype-environment interactions
download_url = https://github.com/limix/struct-lmm
keywords = lmm, gwas, environment
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = struct-lmm
url = https://github.com/limix/struct-lmm
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    chiscore>=0.2.0
    glimix-core>=3.0.0
    numpy-sugar>=1.5.0
    numpy>=1.15
    pytest-doctestplus>=0.1.3
    pytest-doctestplus>=0.3.0
    pytest>=4
    statsmodels>=0.9.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-plus
    --doctest-modules
    --text-file-format="rst"
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE FLOAT_CMP
doctest_plus_atol = 1e-03
doctest_plus_rtol = 1e-03
doctest_rst = enabled
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
pep8ignore = E402 W0212 W0622 R0915

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
